  * Added a whitespace option by by putting whitespaces between atom name
    and residue name, between x and y, and between y and z.
  * Added radius for Chlorine in ligff.py.
  * Added PEOEPB forcefield, data provided by Paul Czodrowski.
  * Updated inputgen.py to write out the electrostatic potential for APBS
    input file. 
  * Updated CHARMM.DAT with two sets of phosphoserine parameters.

 -BUG FIXES
  * Fixed a legacy bug with the web server (web server doesn't like ligand 
    files generated on Windows or old Mac OS platforms).
  * Fixed a bug in configure.ac, so that PDB2PQR no longer checks for 
	Numpy.pth at configure stage.
  * Updated pdb2pka/substruct/Makefile.am. 

#############################################################################
BETA PUBLIC RELEASE VERSION 1.3.0       1-8-08
#############################################################################
 - NEW FEATURES / CHANGES
  * Added "make test" and "make adv-test"
  * Fixed problems with "make dist"
  * Added integration with Opal for launching jobs as well as querying status
  * The user may use NUMPY to specify the location of NUMPY.
  * Both PDB2PKA and PROPKA are enabled by default.  PDB2PKA is enabled by
    default since ligand parameterization would fail without this option.
  * For a regular user, "make install" tells the user the exact command the
    system administrator will use to make the URL viewable.
  * The default value of 7.00 for the pH on the server form is removed due
    to a problem with browser refershing.
  * Updated warning messages for lines beginning with SITE, TURN, SSBOND and 
    LINK.
  * Switched license from GPL to BSD.
  * Made a new tar ball pdb2pqr-1.3.0-1.tar.gz for Windows users who cannot 
    create pdb2pqr.py through configure process.

 - INFRASTRUCTURE
  * configure now automatically detects SRCPATH, WEBSITE, and the location
    of pdb2pqr.cgi.  In version 1.2.1, LOCALPATH(SRCPATH) and WEBSITE were