@@ -11,6 +11,8 @@ BETA PUBLIC RELEASE VERSION 1.3.1       5-6-08
   * Updated inputgen.py to write out the electrostatic potential for APBS
     input file. 
   * Updated CHARMM.DAT with two sets of phosphoserine parameters.
+  * Allowed amino acid chains with only one residue, using --assign-only 
+    option.
 
  -BUG FIXES
   * Fixed a legacy bug with the web server (web server doesn't like ligand 
